--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-detail/user-detail.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-detail/user-detail.component.html
@@ -29,9 +29,9 @@
                         </div>
                         <div class="col-md-9">
                             <input matInput [matDatepicker]="dobPicker" placeholder="Choose a date"
-                            formControlName="dob" >
-                        <mat-datepicker-toggle matSuffix [for]="dobPicker"></mat-datepicker-toggle>
-                        <mat-datepicker #dobPicker></mat-datepicker>
+                                formControlName="dob">
+                            <mat-datepicker-toggle matSuffix [for]="dobPicker"></mat-datepicker-toggle>
+                            <mat-datepicker #dobPicker></mat-datepicker>
                         </div>
                     </div>
                     <div class="row align-items-center">
@@ -90,13 +90,11 @@
                             <h4><label for="note" class="form-label">Notes</label></h4>
                         </div>
                         <div class="col-md-9">
-                            <textarea class="form-control" type="text" id="note" formControlName="note" ></textarea>
+                            <textarea class="form-control" type="text" id="note" formControlName="note"></textarea>
                         </div>
                     </div>
                 </div>
             </div>
-         
-
             <div class="row mt-4 justify-content-center">
                 <div class="col-12 d-flex justify-content-center">
                     <button type="button" class="btn btn-primary btn-lg me-2" (click)="openUpdateDialog()">Change
@@ -104,14 +102,14 @@
                     <button type="button" class="btn btn-secondary btn-lg" (click)="cancel()">Cancel</button>
                 </div>
             </div>
-      
+
         </form>
-  
+
     </div>
     <div class="choice-container">
         <!-- Phần tử "Active" -->
         <div *ngIf="userForm.get('status')?.value === 1" class="status-option text-success">
-            <strong style="color:#5bdf57"> Active User</strong>
+            <strong style="color:#18d312"> Active User</strong>
         </div>
         <!-- Phần tử "Deactive" -->
         <div *ngIf="userForm.get('status')?.value === 0" class="status-option text-danger">
