--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-list/user-list.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-list/user-list.component.css
@@ -1,10 +1,11 @@
 main {
-  position: relative;
+  position: absolute;
   height: 100vh;
-  width: calc(100vw - 100px);
+  width: calc(100vw - 60px);
   max-height: 100vh;
-  max-width: calc(100vw - 100px);
-  left: 80px;
+  max-width: calc(100vw - 60px);
+  min-width: calc(100vw - 60px);
+  left: 45px;
   padding: 30px;
   background-color: #E6E6E6;
 }
