--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/annual-report/list-annual-reports/list-annual-reports.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/annual-report/list-annual-reports/list-annual-reports.component.html
@@ -11,7 +11,7 @@ displayedColumns: string[] = ['Index','Year','TotalExpense','TotalDepartment','C
     </div>
     <div class="mb-4 row">
         <form class="searchBar col-6">
-          <input type="text" placeholder="Search" (input)="changeSearchText($event)" />
+          <input type="text" placeholder="Search by year" (input)="changeSearchText($event)" />
           <i class="fa-solid fa-search"></i>
         </form>
       </div>
